--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Pets Clinic Vets</title>
 </head>
 <body>
     <!--/*@thymesVar id="vet" type="himanshu.springframework.himanshupetclinic.model.Vet"*/-->
-    <h1 th:text="'List of Vets'">List of Vets.....</h1>
-    <table>
+    <h2 th:text="'List of Vets'">List of Vets.....</h2>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <td>Id</td>
-            <td>First Name</td>
-            <td>Last Name</td>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
         </tr>
         </thead>
         <tbody>
